# automatic_insights

./: README.md  pyproject.toml
ai/: converter.py  yaml_utils.py
ai/chains/: parallel_chain.py
ai/chains/sql/name_evaluation/: base.py  bfs_filter.py  database_filter.py
ai/chains/sql/objective_evaluation/: table_llm_objective.py
ai/chains/sql/objective_evaluation/name_evaluation/: base.py
ai/chains/sql/schema_evaluation/: base.py
ai/chains/sql/schema_evaluation/column/: column_single.py
ai/chains/sql/schema_evaluation/table/: table_llm.py
ai/question_answering/: schema.py
ai/question_answering/data/: __init__.py  base.py  llm_multiple.py
ai/question_answering/generators/: base.py
ai/question_answering/generators/thought/: agent.py  llm_discussion.py
ai/question_answering/thought/: __init__.py  base.py
ai/utilities/: sql_database.py
ai/validation/: base.py
analysis/sales_dataset/: test_qna_sql_2.py
tests/question_answering/chains/sql/schema_evaluation/column/: test_column_single.py
tests/question_answering/data/: test_llm_multiple.py  test_llm_single.py
tests/question_answering/generators/hypothesis_answer/: test_llm_hypothesis_answer.py  test_llm_hypothesis_concluder.py
tests/question_answering/generators/thought/: test_llm_discussion.py  test_llm_scoring.py
tests/question_answering/thought/: test_llm_comparison.py
